fixes for script.js

--- a/rock-paper-sizzors/index.html
+++ b/rock-paper-sizzors/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <script src="script.js"></script>   
+
+    <button>rock</button>
+    <button>paper</button>
+    <button>sissors</button>
 </body>
 </html>
